--- a/welcome-page/package.json
+++ b/welcome-page/package.json
@@ -8,6 +8,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@types/ws": "^8.5.4",
     "nuxt": "^3.2.2"
+  },
+  "dependencies": {
+    "axios": "^1.3.3"
   }
 }
